--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=postgres
 #spring.session.jdbc.initialize-schema=always
 spring.jpa.hibernate.hbm2ddl.auto=validate
 spring.jpa.hibernate.jdbc.time_zone=Asia/Yekaterinburg
+jwt.secret=775e4720c8cb43cfb3002dc6d08db41c
